fix: Flex wrap en div de multimedia en Item#show

--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -90,6 +90,7 @@ video {
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 
   // justify-content: center;
   * {
